test_cases/pass/p27.lxr
SCRIPT AREA
START SCRIPT
DECLARE BOOL a, b
a="TRUE"
b="TRUE"
IF (a == b)
START IF
    PRINT: "equal"
END IF
END SCRIPT
