test_cases/fail/f42.lxr
SCRIPT AREA
START SCRIPT
DECLARE BOOL b
DECLARE INT x
b="TRUE"
x=b+1
END SCRIPT
